# altruism

./: .ammanrc.js  .gitignore  .solitarc.js  Anchor.toml  README.md  package.json
.crates/: .crates2.json
.program_client/: Cargo.toml
.program_client/src/: lib.rs
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
program/src/instructions/: claim_donation.rs  claim_withdrawal.rs  create_token_account.rs  deposit.rs  initialize.rs  mod.rs  order_unstake.rs  unstake_donation.rs
program/src/state/: beneficiary.rs  mod.rs  msol_state.rs
programs/altruism/: Cargo.toml
programs/altruism/src/: lib.rs
programs/altruism/src/instructions/: claim_donation.rs  claim_withdrawal.rs  create_mint.rs  create_token_account.rs  deposit.rs  initialize.rs  mint_tokens.rs  mod.rs  order_unstake.rs  unstake_donation.rs  withdraw.rs
programs/altruism/src/state/: beneficiary.rs  mod.rs  msol_state.rs
tests/: altruism.ts
trdelnik-tests/: Cargo.toml
trdelnik-tests/tests/: test.rs
